Fixing previews for clipped export

--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -163,6 +163,7 @@ body {
   height: 80vh;
   min-width: 100%;
   max-width: 100%;
+  min-height: 70vh;
   background-color: #ddd;
 }
 
